<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inclass13.SignupActivity">


    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextFirstName"
        android:layout_alignStart="@+id/editTextFirstName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLastName"
        android:layout_alignStart="@+id/editTextLastName"
        android:layout_below="@+id/editTextLastName"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/emailonSignup"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextEmail"
        android:layout_alignRight="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextConfirmPassword"
        android:layout_alignStart="@+id/editTextConfirmPassword"
        android:layout_below="@+id/editTextConfirmPassword"
        android:layout_marginTop="28dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btnSignUpOnSignUpPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextConfirmPassword"
        android:layout_alignRight="@+id/editTextConfirmPassword"
        android:layout_alignTop="@+id/btnCancel"
        android:text="@string/signup" />

</RelativeLayout>
