<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inclass13.ReadMessage">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/from"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/txtViewSenderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:text="@string/senderName"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewMessageDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="46dp"
        android:text="@string/MessageDescription" />
</RelativeLayout>
