<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtViewSenderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="26dp"
        android:text="@string/senderName"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/txtViewSenderName"
        android:layout_marginEnd="39dp"
        android:text="@string/datetime"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtViewSenderName"
        android:layout_below="@+id/txtViewSenderName"
        android:layout_marginTop="26dp"
        android:maxLines="2"
        android:maxLength="45"
        android:text="@string/message"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imgViewMessageRead"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtViewSenderName"
        android:layout_marginStart="15dp"
        app:srcCompat="@drawable/circle_grey" />
</RelativeLayout>